# UPRE_Serial_Assistant

./: README.md  UPRE_Serial_Assistant.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
project/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
